fixed alignment for scoreboxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,16 +30,29 @@ ol {
 	list-style-position: inside;
 }
 
+.scoreBox {
+	width: 600px;
+	display: block;
+	align-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
 .targetScoreBox {
+	position: relative;
+	float: left;
 	height: 115px;
+	margin-top: 30px;
 	width: 200px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	background-color: tan;
 	font-size: 30px;
 	font-weight: bold;
-	float: left;
-	margin-left: 520px;
 	text-align: center;
-	margin-top: 30px;
+	margin-left: 100px;
 }
 
 .images {
@@ -57,10 +70,14 @@ ol {
 
 .wins-losses {
 	height: 200px;
+	align-content: center;
+	text-align: center;
 	width: 300px;
 	background-color: brown;
 	font-size: 50px;
-	margin-left: 589px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	border-style: solid;
 	border-width:3px;
 	border-color: black;
@@ -68,13 +85,18 @@ ol {
 }
 
 .guessesBox {
+	position: relative;
 	height: 115px;
 	width: 200px;
 	background-color: gray;
 	font-size: 30px;
 	float: left;
 	text-align: center;
+	align-content: center;
 	margin-top: 30px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .clearfix:after {
